--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
 [submodule "home-assistant-polymer"]
-	path = home-assistant-polymer
-	url = https://github.com/home-assistant/home-assistant-polymer
+	path   = home-assistant-polymer
+	url    = https://gitee.com/smart-assistant/frontend
 	branch = dev
+
