同步仓库至2025.03.3

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.11.13
 atomicwrites-homeassistant==1.4.1
 attrs==25.1.0
 awesomeversion==24.6.0
+blockbuster==1.5.23
 brotli==1.1.0
 ciso8601==2.3.2
 colorlog==6.9.0
@@ -14,7 +15,7 @@ dirhash==0.5.0
 docker==7.1.0
 faust-cchardet==2.1.19
 gitpython==3.1.44
-jinja2==3.1.5
+jinja2==3.1.6
 orjson==3.10.12
 pulsectl==24.12.0
 pyudev==0.24.3
@@ -22,8 +23,8 @@ PyYAML==6.0.2
 requests==2.32.3
 securetar==2025.2.1
 sentry-sdk==2.22.0
-setuptools==75.8.2
+setuptools==76.0.0
 voluptuous==0.15.2
-dbus-fast==2.35.1
+dbus-fast==2.37.0
 typing_extensions==4.12.2
 zlib-fast==0.2.1
